--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+    <script src="menu.js"></script>
+    <script src="scene.js"></script>
   </head>
+  
   <body>
       <script src="sketch.js"></script>
-      <script src="menu.js"></script>
+      
 
 </body></html>
